Prepare website for APD event.

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <div class="item">
                             <img src="http://placehold.it/400x400/CC3300/004001&amp;text=&nbsp;" class="img-responsive" alt="">
                             <div class="caption">
-                                <h3>Carlos Barrabes</h3>
+                                <h3>Carlos Barrabés</h3>
                                 <hr class="colored">
                                 <p>President</p>
                                 <ul class="list-inline social">
@@ -258,12 +258,13 @@
                 <div class="col-md-4 wow fadeIn" data-wow-delay=".2s">
                     <div class="media">
                         <div class="pull-left">
-                            <i class="fa fa-clipboard"></i>
+                            <i class="fa fa-eye"></i>
                         </div>
                         <div class="media-body">
-                            <h3 class="media-heading">Insight</h3>
+                            <h3 class="media-heading">Observatory</h3>
                             <ul>
-                                <li></li>
+                                Banking? Insurances? Logistics? It doesn't matter, Blockchain is about remove intermediaries.
+                                We help you understand the paradigm shift to make the right choice.
                             </ul>
                         </div>
                     </div>
@@ -271,12 +272,12 @@
                 <div class="col-md-4 wow fadeIn" data-wow-delay=".4s">
                     <div class="media">
                         <div class="pull-left">
-                            <i class="fa fa-pencil"></i>
+                            <i class="fa fa-flask"></i>
                         </div>
                         <div class="media-body">
-                            <h3 class="media-heading">Prototype</h3>
+                            <h3 class="media-heading">Lab</h3>
                             <ul>
-                                <li></li>
+                                We design and develop your Blockchain use case. We help you to understand and capture the power of this technology for your business. Clluc is part of the Barrabes ecosystem, we can evolve the use case in a startup.
                             </ul>
                         </div>
                     </div>
@@ -284,12 +285,12 @@
                 <div class="col-md-4 wow fadeIn" data-wow-delay=".6s">
                     <div class="media">
                         <div class="pull-left">
-                            <i class="fa fa-rocket"></i>
+                            <i class="fa fa-cubes"></i>
                         </div>
                         <div class="media-body">
-                            <h3 class="media-heading">Startup</h3>
+                            <h3 class="media-heading">Platform</h3>
                             <ul>
-                                <li></li>
+                                We know building Blockchain apps is complex. This is because we have designed an OpenSource "Blockchain as a Service" distribution. Clluc distribution is to Blockchain what Redhat is to Linux.
                             </ul>
                         </div>
                     </div>
@@ -297,67 +298,11 @@
             </div>
         </div>
     </section>
-    <section id="work" class="bg-gray">
-        <div class="container text-center wow fadeIn">
-            <h2>Success cases</h2>
-            <hr class="colored">
-            <p>This is how we have transformed our clients through Blockchain.</p>
-        </div>
-    </section>
-    <section class="portfolio-carousel wow fadeIn">
-        <div class="item" style="background-image: url('assets/img/portfolio/bg-4.jpg')">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-4 col-md-push-8">
-                        <div class="project-details">
-                            <!--<img src="assets/img/client-logos/logo-2.png" class="img-responsive client-logo" alt="">-->
-                            <span class="project-name">Payable APIs</span>
-                            <span class="project-description">Your APIs, like a vending machine.</span>
-                            <hr class="colored">
-                            <a href="#portfolioModal4" data-toggle="modal" class="btn btn-outline-light">View Details <i class="fa fa-long-arrow-right fa-fw"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-md-8 col-md-pull-4 hidden-xs">
-                        <img src="assets/img/portfolio/tablet-screens.png" class="img-responsive portfolio-image" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="contact" class="cta-form bg-dark">
-        <div class="container text-center">
-            <h3>Subscribe to our newsletter!</h3>
-            <hr class="colored">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <!-- MailChimp Signup Form -->
-                    <div id="mc_embed_signup">
-                        <!-- Replace the form action in the line below with your MailChimp embed action! For more informatin on how to do this please visit the Docs! -->
-                        <form role="form" action="//startbootstrap.us3.list-manage.com/subscribe/post?u=531af730d8629808bd96cf489&amp;id=afb284632f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
-                            <div class="input-group input-group-lg">
-                                <input type="email" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Email address...">
-                                <span class="input-group-btn">
-                                    <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary">Subscribe!</button>
-                                </span>
-                            </div>
-                            <div id="mce-responses">
-                                <div class="response" id="mce-error-response" style="display:none"></div>
-                                <div class="response" id="mce-success-response" style="display:none"></div>
-                            </div>
-                        </form>
-                    </div>
-                    <!-- End MailChimp Signup Form -->
-                </div>
-            </div>
-        </div>
-    </section>
+    
     <footer class="footer" style="background-image: url('assets/img/bg-footer.jpg')">
         <div class="container text-center">
             <div class="row">
-                <div class="col-md-4 contact-details">
-                    <h4><i class="fa fa-phone"></i> Call</h4>
-                    <p>(+34) 976 207 920</p>
-                </div>
+                
                 <div class="col-md-4 contact-details">
                     <h4><i class="fa fa-map-marker"></i> Visit</h4>
                     <p>Calle de Serrano, 16.
@@ -365,93 +310,27 @@
                 </div>
                 <div class="col-md-4 contact-details">
                     <h4><i class="fa fa-envelope"></i> Email</h4>
-                    <p><a href="mailto:mail@example.com">hello@clluc.com</a>
+                    <p><a href="mailto:hello@clluc.com">hello@clluc.com</a>
                     </p>
                 </div>
             </div>
             <div class="row social">
                 <div class="col-lg-12">
                     <ul class="list-inline">
-                        <li><a href="#"><i class="fa fa-twitter fa-fw fa-2x"></i></a>
+                        <li><a href="http://twitter.com/joinclluc"><i class="fa fa-twitter fa-fw fa-2x"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-linkedin fa-fw fa-2x"></i></a>
+                        <!--<li><a href="#"><i class="fa fa-linkedin fa-fw fa-2x"></i></a>-->
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="row copyright">
                 <div class="col-lg-12">
-                    <p class="small">&copy; 2015 Clluc</p>
+                    <p class="small">&copy; 2016 Clluc</p>
                 </div>
             </div>
         </div>
     </footer>
-    <!-- Payable API modal -->
-    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('assets/img/portfolio/bg-4.jpg')">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="modal-body">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-8 col-lg-offset-2">
-                            <!--<img src="assets/img/client-logos/logo-2.png" class="img-responsive img-centered" alt="">-->
-                            <h2>Payable API</h2>
-                            <hr class="colored">
-                            <p>Payable API is a service to turn your API in an on-demand Bitcoin payable API.</p>
-                        </div>
-                        <div class="col-lg-12">
-                            <img src="assets/img/portfolio/tablet-screens.png" class="img-responsive img-centered" alt="">
-                        </div>
-                        <div class="col-lg-8 col-lg-offset-2">
-                            <ul class="list-inline item-details">
-                                <li>Website: <strong><a href="http://payableapi.com">Payable-API.com</a></strong>
-                                </li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Legal modal -->
-    <div class="portfolio-modal modal fade" id="legalModal" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('assets/img/portfolio/bg-4.jpg')">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="modal-body">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-8 col-lg-offset-2">
-                            <!--<img src="assets/img/client-logos/logo-2.png" class="img-responsive img-centered" alt="">-->
-                            <h2>Legal</h2>
-                            <hr class="colored">
-                            <p>Clluc S.L. CIF XXXXXX </p>
-                        </div>
-                        <div class="col-lg-12">
-                            <img src="assets/img/portfolio/tablet-screens.png" class="img-responsive img-centered" alt="">
-                        </div>
-                        <div class="col-lg-8 col-lg-offset-2">
-                            <ul class="list-inline item-details">
-                                <li>Website: <strong><a href="http://payableapi.com">Payable-API.com</a></strong>
-                                </li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!-- Core Scripts -->
     <script src="assets/js/jquery.js"></script>
