Fix a line break

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                   <div class="bocadillo">
                     <h3>STEP ONE</h3>
                     <strong>Blockchain observatory</strong>
-                    <p>Banking? Insurances? Logistics? It doesn't matter, Blockchain is about remove intermediaries.</p>
-                    <p>We help you understand the paradigmshift to make the right choice.</p>
+                    <p>Banking? Insurances? Logistics? It doesn't matter, Blockchain is about removing intermediaries.</p>
+                    <p>We help you understand the paradigm shift to make the right choice.</p>
                   </div>
                 </div>
                 <div class="grid-4">
@@ -185,7 +185,8 @@
                  <div class="bocadillo">
                     <h3>STEP THREE</h3>
                     <strong>Clluc Blockchain platform</strong>
-                    <p>We know building Blockchain apps is complex. This is because we have designed an OpenSource "Blockchain as a Service" distribution Clluc distribution is to Blockchain what Redhat is to Linux.</p>
+                    <p>We know building Blockchain apps is complex. This is why we have designed an OpenSource "Blockchain as a Service" distribution.</p>
+                    <p>Clluc distribution is to Blockchain what Redhat is to Linux.</p>
                  </div>
                 <div class="movil_cont">
                   <img src="img/discover/robot-movil.png" alt="" class="movil">
