Add legal links

--- a/legal.html
+++ b/legal.html
@@ -49,10 +49,10 @@
     <header class="container">
       <nav>
         <div class="contLinkNav">
-          <a href="index.html#how_anchor">How</a>
-          <a href="index.html#what_anchor">What</a>
-          <a href="index.html#pioneers_anchor">Pioneers</a>
-          <a href="index.html#contact_anchor" class="last">Contact</a>
+          <a href="index.html#how">How</a>
+          <a href="index.html#what">What</a>
+          <a href="index.html#pioneers">Pioneers</a>
+          <a href="index.html#contact" class="last">Contact</a>
         </div>
         
       </nav>
@@ -99,7 +99,7 @@
     <!-- FOOTER -->
     <footer class="footer container">
       <div class="copy legal">
-        © 2016
+        © 2016 - <a href="#">Legal</a>
       </div>
     </footer>
     
