Layout form to send messages

--- a/index.html
+++ b/index.html
@@ -346,7 +346,13 @@
                     <div class="border_degradado"></div>
                   </div>
               </div>
-              <button class="enviar"><span>Send question</span></button>
+              <div class="grid-container">
+                <span class="grid-9 msgrespond">
+                  <p id="success">Your message has been successfully sent</p>
+                  <p id="error">Your message has not been sent. Try again later</p>
+                </span>
+                <button id='sendEmail'type='button' class="enviar"><span>Send question</span></button>
+              </div>
             </form>
         </section>
         
