Add link to barrabes.biz

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <h3>STEP TWO</h3>
                     <strong>Use case and startups</strong>
                     <p>We design and develop your Blockchain use case. We help you to understand and capture the power of this technology for your business.</p>
-                    <p>Clluc is part of the Barrabes ecosystem, we can evolve the use case in a startup.</p>
+                    <p>Clluc is part of the <a href="http://barrabes.biz">Barrabes ecosystem</a>, we can evolve the use case in a startup.</p>
                   </div>
                   <div class="yellow-bubbles">
                     <img src="img/discover/burbuja-naranja.png" alt="" class="first">
