Add toolbar languages

--- a/index.html
+++ b/index.html
@@ -54,10 +54,16 @@
     <div class="nave"></div>
     <header class="container">
       <nav>
-        <a href="#how">How</a>
-        <a href="#what">What</a>
-        <a href="#pioneers">Pioneers</a>
-        <a href="#contact">Contact</a>
+        <div class="contLang">
+          <a href="/es/index.html" class="lang">ES</a> /
+          <a href="#" class="lang active">EN</a>
+        </div>
+        <div class="contLinkNav">
+          <a href="#how">How</a>
+          <a href="#what">What</a>
+          <a href="#pioneers">Pioneers</a>
+          <a href="#contact" class="last">Contact</a>
+        </div>
       </nav>
       <span class="logo post">
         <img src="img/logo.svg" alt="">
