--- a/es/legal.html
+++ b/es/legal.html
@@ -48,13 +48,16 @@
     <!-- CABECERA -->
     <header class="container">
       <nav>
+        <div class="contLang">
+          <a href="#" class="lang active">ES</a> /
+          <a href="/legal.html" class="lang">EN</a>
+        </div>
         <div class="contLinkNav">
           <a href="index.html#how">How</a>
           <a href="index.html#what">What</a>
           <a href="index.html#pioneers">Pioneers</a>
           <a href="index.html#contact" class="last">Contact</a>
         </div>
-        
       </nav>
       <span class="logo post legal">
         <img src="/img/logo.svg" alt="">
