Translate webpages to Spanish

--- a/es/legal.html
+++ b/es/legal.html
@@ -31,6 +31,7 @@
     <link href="/css/normalize_grid.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
     <link href="/css/legal.css" rel="stylesheet">
+    <link href="/css/style_es.css" rel="stylesheet">
 
     <link rel="author" href="humans.txt" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
@@ -53,10 +54,10 @@
           <a href="/legal.html" class="lang">EN</a>
         </div>
         <div class="contLinkNav">
-          <a href="index.html#how">How</a>
-          <a href="index.html#what">What</a>
-          <a href="index.html#pioneers">Pioneers</a>
-          <a href="index.html#contact" class="last">Contact</a>
+          <a href="index.html#how">Cómo</a>
+          <a href="index.html#what">Qué</a>
+          <a href="index.html#pioneers">Nosotros</a>
+          <a href="index.html#contact" class="last">Contacto</a>
         </div>
       </nav>
       <span class="logo post legal">
@@ -74,26 +75,26 @@
           <div class="grid-container">
             <div class="buho">
               <span class="bocadillo">
-                Legal information
+                Información legal
                 </span>
             </div>
             <div class="parrafo">
-              <p>Website of PRISMCHAIN S.L., fiscal id B87463980 and based at Serrano, 16, 1 28.001 - Madrid, Spain. Registered in in the Registro Mercantil of Madrid T 34176 , F 67, S 8, H M614754. Submitted personal details are incorporated in a PRISMCHAIN S.L. file to keep you updated about us and to provide services as requested. You have access, amendment, cancellation and opposition rights that can be exercised by <a href=mailto:hello@clluc.com>hello@clluc.com</a>.</p>
+              <p>Sitio web de PRISMCHAIN S.L., con NIF B87463980 y domicilio en Calle Serrano, 16, 1 28.001 - Madrid, España. Registro Mercantil de Madrid T 34176 , F 67, S 8, H M614754. Los datos personales que nos aportes quedarán incluidos en un fichero de PRISMCHAIN S.L. y serán usados para mantenerte informado sobre nuestras novedades y para prestarte los servicios que nos hayas contratado. Puedes ejercitar tus derechos de acceso, rectificación, cancelación y oposición escribiendo a <a href=mailto:hello@clluc.com>hello@clluc.com</a>.</p>
             </div>
             <div class="parrafo">
               <h3>Cookies</h3>
-              <p class="subparrafo">We use Google Analytics cookies in order to analyze user navigation on this website. However, this site can be navigated without cookie support. You can configure your browser to block them or to delete them by following these instructions for: <a href="http://windows.microsoft.com/es-es/internet-explorer/delete-manage-cookies#ie=ie-11">Internet Explorer</a>, <a href="https://support.mozilla.org/es/kb/Borrar%20cookies">Firefox</a>, <a href="https://support.google.com/chrome/answer/95647?hl=es">Chrome</a>, <a href="https://support.apple.com/es-es/HT201265">Safari</a>.</p>
-              <p>These are the Google Analytics cookies we use:</p>
+              <p class="subparrafo">Instalamos cookies de Google Analytics, con la finalidad de analizar la navegación de los usuarios por nuestro sitio web. Para utilizar este sitio web no resulta necesaria la instalación de cookies, puedes no aceptarlas o seguir las siguientes instrucciones según su navegador para bloquearlas y, en su caso, eliminarlas: <a href="http://windows.microsoft.com/es-es/internet-explorer/delete-manage-cookies#ie=ie-11">Internet Explorer</a>, <a href="https://support.mozilla.org/es/kb/Borrar%20cookies">Firefox</a>, <a href="https://support.google.com/chrome/answer/95647?hl=es">Chrome</a>, <a href="https://support.apple.com/es-es/HT201265">Safari</a>.</p>
+              <p>Estas son las cookies de Google Analytics que usamos:</p>
               <ul>
                 <li>_ga</li>
                 <li>__utma</li>
                 <li>__utmb</li>
               </ul>
-              <p>You can find their <b>description</b> and <b>expiration time</b> <a href="https://developers.google.com/analytics/devguides/collection/analyticsjs/cookie-usage">here</a>.</p>
+              <p>Puedes encontrar su <b>descripción</b> y <b>duración</b> <a href="https://developers.google.com/analytics/devguides/collection/analyticsjs/cookie-usage">aquí</a>.</p>
             </div>
             <div class="parrafo">
-              <h3>Responsible for the processing of personal data in United States</h3>
-              <p>We use the services of <a href="https://www.dropbox.com/">Dropbox Inc</a>, <a href="https://www.google.com/">Google Inc</a>, <a href="https://www.microsoft.com/es-es">Microsoft</a>, <a href="https://slack.com/">Slack</a> and <a href="http://mailchimp.com/">MailChimp</a> to process and storage all information we produce and receive.</p>
+              <h3>States</h3>
+              <p>Usamos los servicios de <a href="https://www.dropbox.com/">Dropbox Inc</a>, <a href="https://www.google.com/">Google Inc</a>, <a href="https://www.microsoft.com/es-es">Microsoft</a>, <a href="https://slack.com/">Slack</a> and <a href="http://mailchimp.com/">MailChimp</a> para procesar y guardar toda la información que producimos y recibimos.</p>
             </div>
           </div>
        </section>
