--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 </div>
                 <div class="grid-8">
                   <div class="bocadillo">
-                    <h3>STEP ONE</h3>
+                    <h3>BLOCK ONE</h3>
                     <strong>Blockchain observatory</strong>
                     <p>Banking? Insurances? Logistics? It doesn't matter, Blockchain is about removing intermediaries.</p>
                     <p>We help you understand the paradigm shift to make the right choice.</p>
@@ -167,7 +167,7 @@
             <!-- STARTUPS -->
             <div class="two grid-container">
                   <div class="bocadillo">
-                    <h3>STEP TWO</h3>
+                    <h3>BLOCK TWO</h3>
                     <strong>Use case and startups</strong>
                     <p>We design and develop your Blockchain use case. We help you to understand and capture the power of this technology for your business.</p>
                     <p>Clluc is part of the <a href="http://barrabes.biz">Barrabes ecosystem</a>, we can evolve the use case in a startup.</p>
@@ -192,7 +192,7 @@
               <!-- PLATFORM -->
             <div class="three grid-container">
                  <div class="bocadillo">
-                    <h3>STEP THREE</h3>
+                    <h3>BLOCK THREE</h3>
                     <strong>Clluc Blockchain platform</strong>
                     <p>We know building Blockchain apps is complex. This is why we have designed an OpenSource "Blockchain as a Service" distribution.</p>
                     <p>Clluc distribution is to Blockchain what Redhat is to Linux.</p>
