--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>CLLUC</title>
     
     <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="blockchain,use case,use case blockchain,blockchain use case,use cases,use cases blockchain,blockchain use cases,caso de uso,caso de uso blockchain,blockchain caso de uso,casos de uso,casos de uso blockchain,blockchain casos de uso">
     <meta name="author" content="">
     
     <!-- Twitter Card data -->
