Update legal pages

--- a/es/legal.html
+++ b/es/legal.html
@@ -87,6 +87,7 @@
               <p>Estas son las cookies de Google Analytics que usamos:</p>
               <ul>
                 <li>_ga</li>
+                <li>_gat</li>
                 <li>__utma</li>
                 <li>__utmb</li>
               </ul>
