--- a/legal.html
+++ b/legal.html
@@ -86,6 +86,7 @@
               <p>These are the Google Analytics cookies we use:</p>
               <ul>
                 <li>_ga</li>
+                <li>_gat</li>
                 <li>__utma</li>
                 <li>__utmb</li>
               </ul>
