--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CLLUC</title>
     
-    <meta name="description" content="">
+    <meta name="description" content="Innovation through the Blockchain">
     <meta name="keywords" content="blockchain,use case,use case blockchain,blockchain use case,use cases,use cases blockchain,blockchain use cases,caso de uso,caso de uso blockchain,blockchain caso de uso,casos de uso,casos de uso blockchain,blockchain casos de uso">
     <meta name="author" content="">
     
