Add metadata in all pages

--- a/legal.html
+++ b/legal.html
@@ -7,26 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CLLUC</title>
     
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Innovation through the Blockchain">
+    <meta name="keywords" content="blockchain,use case,use case blockchain,blockchain use case,use cases,use cases blockchain,blockchain use cases,caso de uso,caso de uso blockchain,blockchain caso de uso,casos de uso,casos de uso blockchain,blockchain casos de uso">
+    <meta name="author" content="Clluc">
     
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@publisher_handle">
-    <meta name="twitter:title" content="">
-    <meta name="twitter:description" content="Page description less than 200 characters">
-    <meta name="twitter:creator" content="@author_handle">
+    <meta name="twitter:site" content="@joinclluc">
+    <meta name="twitter:title" content="Clluc">
+    <meta name="twitter:description" content="Innovation through the Blockchain">
+    <meta name="twitter:creator" content="@joinclluc">
     <meta name="twitter:image" content="img/twitter_image.png">
     <!--Twitter Summary card images must be at least 200x200px-->
 
-    <!-- Facebook meta tags -->
-    <meta property="og:title" content="" />
-    <meta property="og:description" content=""/>
-    <meta property="og:type" content="" />
-    <meta property="og:url" content="" >
+    <meta property="og:title" content="Clluc" />
+    <meta property="og:description" content="Innovation through the Blockchain"/>
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://clluc.com" >
     <meta property="og:image" content="img/fb_image.png" />
-    <meta property="og:site_name" content="" />
+    <meta property="og:site_name" content="Clluc" />
 
     <link href="css/normalize_grid.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
