Add link in title Clluc

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
       </nav>
       <span class="logo post">
-        <img src="img/logo.svg" alt="">
+        <a href="#"><img src="img/logo.svg" alt=""></a>
         <h1>Digital transformation through Blockchain</h1>
       </span>
       <div class="cabecera">
