--- a/legal.html
+++ b/legal.html
@@ -59,7 +59,7 @@
         </div>
       </nav>
       <span class="logo post legal">
-        <img src="img/logo.svg" alt="">
+        <a href="index.html"><img src="img/logo.svg" alt=""></a>
         <h1>Digital transformation through Blockchain</h1>
       </span>
       
