--- a/es/index.html
+++ b/es/index.html
@@ -66,7 +66,7 @@
         </div>
       </nav>
       <span class="logo post">
-        <img src="/img/logo.svg" alt="">
+        <a href="#"><img src="/img/logo.svg" alt=""></a>
         <h1>Digital transformation through Blockchain</h1>
       </span>
       <div class="cabecera">
