--- a/es/legal.html
+++ b/es/legal.html
@@ -60,7 +60,7 @@
         </div>
       </nav>
       <span class="logo post legal">
-        <img src="/img/logo.svg" alt="">
+        <a href="/es/index.html"><img src="/img/logo.svg" alt=""></a>
         <h1>Digital transformation through Blockchain</h1>
       </span>
       
