Add linkedin company link

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                     data-from="1"
                     data-to="0"
                     data-translatex="600">
-              <a href="http://linkedin.com/in/gotoalberto/en" target="_blank">
+              <a href="https://www.linkedin.com/company/10460446?trk=prof-exp-company-name" target="_blank">
               <img src="img/footer/linkedin.png" alt="">
               </a>
             </div>
