Add blog button

--- a/es/index.html
+++ b/es/index.html
@@ -62,7 +62,8 @@
           <a href="#how">Cómo</a>
           <a href="#what">Qué</a>
           <a href="#pioneers">Equipo</a>
-          <a href="#contact" class="last">Contacto</a>
+          <a href="#contact" >Contacto</a>
+          <a href="/es/blog" class="last">Blog</a>
         </div>
       </nav>
       <span class="logo post">
