--- a/es/legal.html
+++ b/es/legal.html
@@ -56,7 +56,8 @@
           <a href="index.html#how">Cómo</a>
           <a href="index.html#what">Qué</a>
           <a href="index.html#pioneers">Nosotros</a>
-          <a href="index.html#contact" class="last">Contacto</a>
+          <a href="index.html#contact">Contacto</a>
+          <a href="/es/blog" class="last">Blog</a>
         </div>
       </nav>
       <span class="logo post legal">
