--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
           <a href="#how">How</a>
           <a href="#what">What</a>
           <a href="#pioneers">Pioneers</a>
-          <a href="#contact" class="last">Contact</a>
+          <a href="#contact" >Contact</a>
+          <a href="/es/blog" class="last">Blog</a>
         </div>
       </nav>
       <span class="logo post">
