--- a/legal.html
+++ b/legal.html
@@ -55,7 +55,8 @@
           <a href="index.html#how">How</a>
           <a href="index.html#what">What</a>
           <a href="index.html#pioneers">Pioneers</a>
-          <a href="index.html#contact" class="last">Contact</a>
+          <a href="index.html#contact" >Contact</a>
+          <a href="/es/blog" class="last">Blog</a>
         </div>
       </nav>
       <span class="logo post legal">
