Remove 'index.html' to url

--- a/es/index.html
+++ b/es/index.html
@@ -56,7 +56,7 @@
       <nav>
         <div class="contLang">
           <a href="#" class="lang active">ES</a> /
-          <a href="/index.html" class="lang">EN</a>
+          <a href="/" class="lang">EN</a>
         </div>
         <div class="contLinkNav">
           <a href="#how">Cómo</a>
