--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <header class="container">
       <nav>
         <div class="contLang">
-          <a href="/es/index.html" class="lang">ES</a> /
+          <a href="/es" class="lang">ES</a> /
           <a href="#" class="lang active">EN</a>
         </div>
         <div class="contLinkNav">
