--- a/legal.html
+++ b/legal.html
@@ -52,15 +52,15 @@
           <a href="#" class="lang active">EN</a>
         </div>
         <div class="contLinkNav">
-          <a href="index.html#how">How</a>
-          <a href="index.html#what">What</a>
-          <a href="index.html#pioneers">Pioneers</a>
-          <a href="index.html#contact" >Contact</a>
+          <a href="/#how">How</a>
+          <a href="/#what">What</a>
+          <a href="/#pioneers">Pioneers</a>
+          <a href="/#contact" >Contact</a>
           <a href="/es/blog" class="last">Blog</a>
         </div>
       </nav>
       <span class="logo post legal">
-        <a href="index.html"><img src="img/logo.svg" alt=""></a>
+        <a href="/"><img src="img/logo.svg" alt=""></a>
         <h1>Digital transformation through Blockchain</h1>
       </span>
       
