Add Jobs button

--- a/es/index.html
+++ b/es/index.html
@@ -63,7 +63,8 @@
           <a href="#what">Qué</a>
           <a href="#pioneers">Equipo</a>
           <a href="#contact" >Contacto</a>
-          <a href="/es/blog" class="last">Blog</a>
+          <a href="/es/blog">Blog</a>
+          <a href="/jobs" class="last">Trabajo</a>
         </div>
       </nav>
       <span class="logo post">
