--- a/es/legal.html
+++ b/es/legal.html
@@ -57,7 +57,8 @@
           <a href="/es/#what">Qué</a>
           <a href="/es/#pioneers">Nosotros</a>
           <a href="/es/#contact">Contacto</a>
-          <a href="/es/blog" class="last">Blog</a>
+          <a href="/es/blog">Blog</a>
+          <a href="/jobs" class="last">Trabajo</a>
         </div>
       </nav>
       <span class="logo post legal">
