--- a/legal.html
+++ b/legal.html
@@ -56,7 +56,8 @@
           <a href="/#what">What</a>
           <a href="/#pioneers">Pioneers</a>
           <a href="/#contact" >Contact</a>
-          <a href="/es/blog" class="last">Blog</a>
+          <a href="/es/blog">Blog</a>
+          <a href="/jobs" class="last">Jobs</a>
         </div>
       </nav>
       <span class="logo post legal">
