--- a/jobs.html
+++ b/jobs.html
@@ -114,8 +114,36 @@
                 <li>Knowledge about Big Data Technologies.</li>
               </ul>
               <p class="subparrafo">Salary: 35.000€ - 42.000€ /Year</p>
+            <p>Write us if you are interested. Send us your Github, Linkedin CV where we can see what you do. Tell us what interesting things you make :) </p>
           </div>
-       </section>
+        </section>
+        <section class="bg_purple container contacto" id="contact">
+          <div class="parrafo">
+          <h2>Want to ask something?</h2>
+          <div class="border_degradado"></div>
+            <form action="" class="form">
+              <div class="grid-container">
+                  <div class="grid-4">
+                    <label for="email">Who are you?</label>
+                    <input type="text" id="email" name="email" placeholder="Email address">
+                    <div class="border_degradado"></div>
+                  </div>
+                  <div class="grid-8">
+                    <label for="question">Your request</label>
+                    <textarea  id="question" name="question" placeholder="Write your request"></textarea>
+                    <div class="border_degradado"></div>
+                  </div>
+              </div>
+              <div class="grid-container">
+                <span class="grid-9 msgrespond">
+                  <p id="success">Your message has been successfully sent</p>
+                  <p id="error">Your message has not been sent. Try again later</p>
+                </span>
+                <button id='sendEmail'type='button' class="enviar"><span>Apply</span></button>
+              </div>
+            </form>
+          </div>
+        </section>
     </div><!-- END CUERPO CENTRAL -->
     
     <!-- FOOTER -->
