Add junior job offer

--- a/jobs.html
+++ b/jobs.html
@@ -114,7 +114,18 @@
                 <li>Knowledge about Big Data Technologies.</li>
               </ul>
               <p class="subparrafo">Salary: 35.000€ - 42.000€ /Year</p>
-            <p>Write us if you are interested. Send us your Github, Linkedin CV where we can see what you do. Tell us what interesting things you make :) </p>
+              <h3 class="subparrafo">Junior Scala Software Developer</h3>
+              <p>Must to have:</p>
+              <ul class="tohave">
+                <li>You have a solid knowledge about Java language and JVM.</li>
+                <li>If you're passionate about technology and development.</li>
+                <li>You are starting with our stack tech.</li>
+                <li>You stay in line with our work philosophy.</li>
+                <li>And Bitcoin & Ethereum catch your attention.</li>
+              </ul>
+              <p class="subparrafo">Just jump in and contact us. We could work in Clluc.</p>
+              <p class="subparrafo">Salary: 21.000€ - 25.000€ /Year</p>
+             <p>Write us if you are interested. Send us your Github, Linkedin CV where we can see what you do. Tell us what interesting things you make :) </p>
           </div>
         </section>
         <section class="bg_purple container contacto" id="contact">
