Rename placeholder job form

--- a/jobs.html
+++ b/jobs.html
@@ -129,8 +129,8 @@
                     <div class="border_degradado"></div>
                   </div>
                   <div class="grid-8">
-                    <label for="question">Your request</label>
-                    <textarea  id="question" name="question" placeholder="Write your request"></textarea>
+                    <label for="question">Link to your linkedin profile</label>
+                    <textarea  id="question" name="question" placeholder="Write your linkedin profile"></textarea>
                     <div class="border_degradado"></div>
                   </div>
               </div>
