--- a/jobs.html
+++ b/jobs.html
@@ -97,7 +97,7 @@
               We don't evaluate the candidate for years of experience. For us, the most important thing is your contribution to the company, your skills and your attitude. Thus, you will have to complete and defend a coding exercise and answer a few questions about software development.
               </p>
               <h3 class="subparrafo">Scala Software Developer</h3>
-              <p>Must to have:</p>
+              <p>Must have:</p>
               <ul class="tohave">
                 <li>You have a solid knowledge about Java language and JVM.</li>
                 <li>You are concerned about writing clean code and caring of the quality.</li>
@@ -115,7 +115,7 @@
               </ul>
               <p class="subparrafo">Salary: 35.000€ - 42.000€ /Year</p>
               <h3 class="subparrafo">Junior Scala Software Developer</h3>
-              <p>Must to have:</p>
+              <p>Must have:</p>
               <ul class="tohave">
                 <li>You have a solid knowledge about Java language and JVM.</li>
                 <li>If you're passionate about technology and development.</li>
