--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CLLUC</title>
+    <title>CLLUC - Digital transformation through Blockchain</title>
     
-    <meta name="description" content="Innovation through the Blockchain">
+    <meta name="description" content="Digital transformation through Blockchain">
     <meta name="keywords" content="blockchain,use case,use case blockchain,blockchain use case,use cases,use cases blockchain,blockchain use cases,caso de uso,caso de uso blockchain,blockchain caso de uso,casos de uso,casos de uso blockchain,blockchain casos de uso">
     <meta name="author" content="Clluc">
     
@@ -15,13 +15,13 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@joinclluc">
     <meta name="twitter:title" content="Clluc">
-    <meta name="twitter:description" content="Innovation through the Blockchain">
+    <meta name="twitter:description" content="Digital transformation through Blockchain">
     <meta name="twitter:creator" content="@joinclluc">
     <meta name="twitter:image" content="img/twitter_image.png">
     <!--Twitter Summary card images must be at least 200x200px-->
 
     <meta property="og:title" content="Clluc" />
-    <meta property="og:description" content="Innovation through the Blockchain"/>
+    <meta property="og:description" content="Digital transformation through Blockchain"/>
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://clluc.com" >
     <meta property="og:image" content="img/fb_image.png" />
