Remove unnecessary html extension

--- a/es/index.html
+++ b/es/index.html
@@ -391,7 +391,7 @@
             <div class="grid-4"><div class="cont_img_foot"><img src="/img/footer/ico-mail.png" alt="" class="mail"></div><a href="mailto:hello@clluc.com"><strong>hello@clluc.com</strong></a></div>
           </div>
           <div class="copy">
-            © 2016 - <a href="/es/legal.html">Legal</a>
+            © 2016 - <a href="/es/legal">Legal</a>
           </div>
         </footer>
       </div><!-- END BG MORADO  RESTO LANDING -->
