--- a/es/legal.html
+++ b/es/legal.html
@@ -50,7 +50,7 @@
       <nav>
         <div class="contLang">
           <a href="#" class="lang active">ES</a> /
-          <a href="/legal.html" class="lang">EN</a>
+          <a href="/legal" class="lang">EN</a>
         </div>
         <div class="contLinkNav">
           <a href="/es/#how">Cómo</a>
