--- a/legal.html
+++ b/legal.html
@@ -48,7 +48,7 @@
     <header class="container">
       <nav>
         <div class="contLang">
-          <a href="/es/legal.html" class="lang">ES</a>
+          <a href="/es/legal" class="lang">ES</a>
           <a href="#" class="lang active">EN</a>
         </div>
         <div class="contLinkNav">
